apps/backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-conference-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: video-conference.postply.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: video-conference-service
            port:
              number: 3008
